NAS-141809: Fix IPMI Events dialog not showing events

--- a/src/app/pages/system/network/components/ipmi-card/ipmi-events-dialog/ipmi-events-dialog.component.scss
+++ b/src/app/pages/system/network/components/ipmi-card/ipmi-events-dialog/ipmi-events-dialog.component.scss
@@ -3,7 +3,7 @@
 :host {
   display: flex;
   flex-direction: column;
-  height: 80vh;
+  max-height: 80vh;
   min-width: 450px;
 
   @media (max-width: $breakpoint-tablet) {
